Version 2.7.1dev:

* Updated emulation core from WinUAE 3200b13.

Version 2.7.0dev:

* Merged JIT compiler updates from the ARAnyM project.
* Support for JIT compilation on x86-64 (Linux/Windows/OS X). It may contain
  bugs yet. FPU JIT is currently disabled by default for x86-64.
* JIT 64-bit direct memory exception handlers for Linux/Windows/OS X.
* Compile FS-UAE / Windows as large address aware for more virtual memory.
* Updated emulation core from WinUAE 3200b12.

Version 2.5.42dev:

* Map gamepad start button to menu when in Amiga joystick mode (not CD32).
* Map gamepad select button to pause action.
* Added/updated some XInput controller configs for DirectInput mode.

Version 2.5.41dev:

* Implement action_pause to make action key configurable.
* Separate auto-fire button (based on patch from S. Jordan).
* Dedicated auto-fire button mapped to "right trigger" by default.
* New boolean option jit_compiler (to enable/disable JIT compilation).
* New option jit_memory (=direct/indirect).
* JIT compiler defaults to direct memory access on all platforms now.
* JIT direct memory exception handler for OS X (32-bit).
* Imported updated translations from crowdin.com.

Version 2.5.40dev:

* Use SetUnhandledExceptionFilter on Windows for JIT direct memory.
* Unified (segfault) exception handler for Windows and Linux.
* Fixed mman for compatibility with JIT direct memory access.
* Re-enable uae_comp_trust* = indirectKS options.
* Allow uae_rtc to be set without disabling uae_chipset_compatible.
* Fixed flickering caused by undefined behavior in shift operations.
* Added new option log_bsdsocket (boolean).

Version 2.5.39dev:

* Updated config for Logitech F310 and added Thrustmaster Dual Action 4.
* Updated AROS kickstart replacement to ver. 2015-05-20 from WinUAE 3.1.0.
* Config files must end with .fs-uae or .conf to be loaded by FS-UAE.
* If you give fs-uae a command line argument with path to a .adf, it will
  be used as value for floppy_drive_0.